# two_phase_skyrme

./: .gitignore  README  SkyrmeT  SkyrmeT.py  skyrme_thermo_num.nb
Nunleus_medium/: Untitled.ipynb  nucleus_medium.tex  nucleus_medium.tex.backup
Skyrme_EOS_cpp/: .ycm_extra_conf.py  CMakeLists.txt  CMakeLists_Requirements.txt  Makefile  doxygen_script
Skyrme_EOS_cpp/CMakeModules/: CorrectWindowsPaths.cmake  FindCairomm.cmake  FindFreetype.cmake  FindGSL.cmake  FindMKL.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  FindSigC++.cmake  FindTrilinos.cmake  MakeBuildInfo.cmake.in  ResolveCompilerPaths.cmake
Skyrme_EOS_cpp/doc/html/: Constants_8hpp.html  Constants_8hpp_source.html  EOSBase_8hpp.html  EOSBase_8hpp_source.html  EOSData_8cpp.html  EOSData_8hpp.html  EOSData_8hpp_source.html  EOSSkyrme_8cpp.html  EOSSkyrme_8hpp.html  EOSSkyrme_8hpp_source.html  GibbsPhaseConstruct_8cpp.html  GibbsPhaseConstruct_8hpp.html  GibbsPhaseConstruct_8hpp_source.html  MultiDimensionalRoot_8hpp.html  MultiDimensionalRoot_8hpp_source.html  OneDimensionalRoot_8hpp.html  OneDimensionalRoot_8hpp_source.html  annotated.html  classEOSBase-members.html  classEOSBase.html  classEOSData-members.html  classEOSData.html  classEOSSkyrme-members.html  classEOSSkyrme.html  classGibbsPhaseConstruct-members.html  classGibbsPhaseConstruct.html  classMultiDRootException-members.html  classMultiDRootException.html  classMultiDimensionalRoot-members.html  classMultiDimensionalRoot.html  classOneDimensionalRoot-members.html  classOneDimensionalRoot.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  (+2 more)
Skyrme_EOS_cpp/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  search.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+4 more)
Skyrme_EOS_cpp/exe/: eos_data_Ska35s201.xml  eos_data_sat_Ska25s201.xml  skyrme
Skyrme_EOS_cpp/src/: CMakeLists.txt  Constants.hpp  EOSBase.hpp  EOSData.cpp  EOSData.hpp  EOSSingleNucleus.cpp  EOSSingleNucleus.hpp  EOSSkyrme.cpp  EOSSkyrme.hpp  EOSTable.cpp  EOSTable.hpp  GibbsPhaseConstruct.cpp  GibbsPhaseConstruct.hpp  MultiDimensionalRoot.hpp  NDArray.hpp  OneDimensionalRoot.cpp  OneDimensionalRoot.hpp  SkyrmeParameters.hpp  funct_fermi1.f90  gibbs_archive.cpp  gibbs_boundary.cpp  gibbs_test.cpp  skyrme_exe.cpp  table_test.cpp
Skyrme_EOS_cpp/src/EquationsOfState/: CMakeLists.txt  EOSBase.hpp  EOSData.cpp  EOSData.hpp  EOSElectron.cpp  EOSElectron.hpp  EOSNSE.cpp  EOSNSE.hpp  EOSNSE_constructors.cpp  EOSSingleNucleus.cpp  EOSSingleNucleus.cpp~  EOSSingleNucleus.hpp  EOSSkyrme.cpp  EOSSkyrme.hpp  EOSTestSuite.cpp  EOSTestSuite.hpp  GibbsPhaseConstruct.cpp  GibbsPhaseConstruct.hpp  LDNucleus.cpp  LDNucleus.hpp  NucleusBase.cpp  NucleusBase.hpp  SkyrmeParameters.hpp  electron_eos_luke.f90  fermidirac_integrals.f90
Skyrme_EOS_cpp/src/Output/: CMakeLists.txt  EOSTable.cpp  EOSTable.hpp
Skyrme_EOS_cpp/src/Util/: CMakeLists.txt  Constants.hpp  LambertW.cc  LambertW.h  MultiDimensionalRoot.hpp  NDArray.hpp  OneDimensionalMinimization.hpp  OneDimensionalRoot.hpp  funct_fermi1.f90  funct_fermi45.f90
Skyrme_EOS_cpp/tests/: CMakeLists.txt  eosdata_test.cpp  eoselectron_test.cpp  gibbs_archive.cpp  gibbs_boundary.cpp  gibbs_test.cpp  nse_guess_test.cpp  nse_test.cpp  nse_test_new.cpp  nucleus_test.cpp  pressure_comparison.cpp  skyrme_test.cpp  table_test.cpp  test_fermi_deriv.f90
Skyrme_EOS_fortran/: Makefile
Skyrme_EOS_fortran/src/: LSexe.F90  get_gibbs_boundary.F90  tabular_test.F90
Skyrme_EOS_fortran/src/eos/: LS_construction.F90  Tabular_EOS.F90  eos_gibbs_region.F90  eos_skyrme.F90
Skyrme_EOS_fortran/src/nr_src/: fdjac.f90  lnsrch.f90  newt.f90  nrtype.f90  nrutil.f90
Skyrme_EOS_fortran/src/util/: bisect.f90
Skyrme_fortran_EOS/src/: build_table.F90  get_bulk_properties.F90  get_gibbs_boundary.F90  nse_test.F90  nucleus_properties.F90  skyrme_exe.F90
Skyrme_fortran_EOS/src/TOV_shit/: TOV_tabular.F90  mytov.F90
Skyrme_fortran_EOS/src/eos/: eos_com.F90  eos_nse.F90  eos_skyrme.F90
Skyrme_fortran_EOS/src/nr_src/: fmin.f90  nr.f90  nr_interface.f90  xnewt.f90
Skyrme_fortran_EOS/src/util/: h5_output.F90  h5_writer_test.F90
notes/: Compare_Luke_Ermal.nb  NSE_EOS_notes.aux  NSE_EOS_notes.out  NSE_EOS_notes.tex  NSE_EOS_notes.tex.backup  NSE_EOS_notes.toc  Skyrme.nb  SkyrmeDerivatives.nb  Surface_Term.nb  Verification_of_expressions_Ffs.nb  skyrme_notes_ermal.aux  skyrme_notes_ermal.out  skyrme_notes_ermal.tex
notes/neutrino_interactions/: kinematics.nb  neutrino_annihilation.nb  neutrino_annihilation.tex  neutrino_interaction_derivation.nb  neutrino_kernels.nb
